add tela de criação de pedidos com validação de campos

--- a/config/locales/product_model.pt-BR.yml
+++ b/config/locales/product_model.pt-BR.yml
@@ -12,4 +12,6 @@ pt-BR:
         sku: "SKU"
         supplier_id: "Fornecedor" 
         supplier: "Fornecedor" 
+        dimentions: "Dimensões"
+        new_product_model: "Novo modelo de produtos"
 
