--- a/config/locales/order.pt-BR.yml
+++ b/config/locales/order.pt-BR.yml
@@ -1,7 +1,9 @@
 pt-BR:
   activerecord:
     models:
-      order: "Pedido"
+      order: 
+        one: "Pedido"
+        other: "Pedidos"
     attributes:
       order: 
         warehouse_id: "Galpão destino" # um do banco de dados
@@ -12,3 +14,9 @@ pt-BR:
         user_id: "Usuário responsável"
         user: "Usuário responsável"
         register_order: "Registrar pedido"
+        edit_order: "Editar pedido"
+        code: "Código"
+        my_orders: "Meus pedidos"
+
+
+
